--- a/index.html
+++ b/index.html
@@ -4,171 +4,346 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AP CS Exam Email Marketing Calendar</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://unpkg.com/lucide-react@latest/dist/lucide-react.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom right, #eff6ff, #e0e7ff);
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+      padding: 25px 30px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 26px;
+      color: #3730a3;
+      margin-bottom: 5px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    .small {
+      font-size: 13px;
+      color: #777;
+    }
+
+    .month {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      overflow: hidden;
+      margin-bottom: 15px;
+    }
+
+    .month-header {
+      cursor: pointer;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #eee;
+      transition: background 0.2s ease;
+    }
+
+    .month-header:hover {
+      background: #f9fafb;
+    }
+
+    .month-header h2 {
+      margin: 0;
+      font-size: 20px;
+      color: #4338ca;
+    }
+
+    .month-header p {
+      margin: 5px 0;
+      font-size: 13px;
+      color: #666;
+    }
+
+    .arrow {
+      font-size: 22px;
+      color: #888;
+      transition: transform 0.3s ease;
+    }
+
+    .arrow.up {
+      transform: rotate(180deg);
+    }
+
+    .emails {
+      display: none;
+      padding: 10px 20px 20px;
+    }
+
+    .email-item {
+      border-bottom: 1px solid #eee;
+      padding: 15px 0;
+    }
+
+    .email-item:last-child {
+      border-bottom: none;
+    }
+
+    .badges {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 6px;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 3px 10px;
+      border-radius: 12px;
+      font-size: 11px;
+      font-weight: 600;
+    }
+
+    .week {
+      background: #e0e7ff;
+      color: #3730a3;
+    }
+
+    .hook {
+      background: #f3e8ff;
+      color: #7e22ce;
+    }
+
+    .email-item h3 {
+      font-size: 16px;
+      margin: 5px 0;
+      color: #111827;
+    }
+
+    .cta {
+      color: #059669;
+      font-weight: 600;
+      font-size: 13px;
+    }
+
+    .prompt-box {
+      background: linear-gradient(to right, #eef2ff, #faf5ff);
+      border-left: 4px solid #4f46e5;
+      padding: 12px 16px;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
+
+    .prompt-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .copy-btn {
+      background: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 5px 10px;
+      font-size: 12px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      transition: background 0.2s;
+    }
+
+    .copy-btn:hover {
+      background: #4338ca;
+    }
+
+    .prompt-text {
+      font-size: 13px;
+      color: #444;
+      line-height: 1.5;
+    }
+
+    .footer {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      padding: 20px;
+      margin-top: 25px;
+    }
+
+    .footer h3 {
+      margin-bottom: 10px;
+      font-size: 18px;
+      color: #1f2937;
+    }
+
+    .footer ul {
+      padding-left: 20px;
+      font-size: 14px;
+      color: #374151;
+    }
+
+    .footer li {
+      margin-bottom: 6px;
+    }
+
+    @media (max-width: 700px) {
+      .month-header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .arrow {
+        align-self: flex-end;
+      }
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
+<body>
+  <div class="container">
+    <div class="card">
+      <h1>📅 AP CS Exam Email Marketing Calendar</h1>
+      <p class="subtitle">November 2024 - July 2025 | 3 Emails per Week</p>
+      <p class="small">📧 Total: 96+ high-converting emails with CustomGPT prompts</p>
+    </div>
 
-  <div id="root"></div>
-
-  <script type="text/babel">
-    const { useState } = React;
-    const { Calendar, Mail, Copy, Check, ChevronDown, ChevronUp } = lucideReact;
-
-    const EmailCalendar = () => {
-      const [expandedMonth, setExpandedMonth] = useState('November');
-      const [copiedIndex, setCopiedIndex] = useState(null);
-
-      const copyToClipboard = (text, index) => {
-        navigator.clipboard.writeText(text);
-        setCopiedIndex(index);
-        setTimeout(() => setCopiedIndex(null), 2000);
-      };
-
-      const calendar = [
-        {
-          month: "November",
-          theme: "Foundation & Fear-Busting",
-          emails: [
-            {
-              week: "Week 1",
-              subject: "Your brain is lying to you about AP CS...",
-              hook: "Fear/Pattern Interrupt",
-              cta: "Reply 'READY' to see how we turn C students into 5-scorers",
-              prompt: "Write a marketing email using the 'brain lying' angle..."
-            },
-            {
-              week: "Week 1",
-              subject: "[FIRSTNAME] - This is NOT another coding course",
-              hook: "Differentiation",
-              cta: "Book a 15-min Strategy Call - 3 spots left this week",
-              prompt: "Create an email that positions our AP CS prep..."
-            }
-          ]
-        },
-        {
-          month: "December",
-          theme: "Urgency & Holiday Momentum",
-          emails: [
-            {
-              week: "Week 1",
-              subject: "While everyone's baking cookies, smart students are...",
-              hook: "Opportunity/Contrast",
-              cta: "Start now, thank yourself in May - Book call",
-              prompt: "Create an email about using the holiday season strategically..."
-            }
-          ]
-        }
-      ];
-
-      return (
-        <div className="max-w-6xl mx-auto p-6">
-          <div className="bg-white rounded-xl shadow-lg p-8 mb-6">
-            <div className="flex items-center gap-3 mb-4">
-              <Calendar className="w-8 h-8 text-indigo-600" />
-              <h1 className="text-3xl font-bold text-gray-800">AP CS Exam Email Marketing Calendar</h1>
-            </div>
-            <p className="text-gray-600 mb-2">November 2024 - July 2025 | 3 Emails per Week</p>
-            <div className="flex items-center gap-2 text-sm text-gray-500">
-              <Mail className="w-4 h-4" />
-              <span>Total: 96+ high-converting emails with CustomGPT prompts</span>
-            </div>
+    <!-- Month: November -->
+    <div class="month">
+      <div class="month-header" onclick="toggleMonth(this)">
+        <div>
+          <h2>November</h2>
+          <p>Theme: Foundation & Fear-Busting</p>
+          <p class="small">5 emails this month</p>
+        </div>
+        <div class="arrow">▼</div>
+      </div>
+      <div class="emails">
+        <div class="email-item">
+          <div class="badges">
+            <span class="badge week">Week 1</span>
+            <span class="badge hook">Fear/Pattern Interrupt</span>
           </div>
-
-          <div className="space-y-4">
-            {calendar.map((month, monthIndex) => (
-              <div key={monthIndex} className="bg-white rounded-xl shadow-lg overflow-hidden">
-                <button
-                  onClick={() => setExpandedMonth(expandedMonth === month.month ? null : month.month)}
-                  className="w-full p-6 flex items-center justify-between hover:bg-gray-50 transition-colors"
-                >
-                  <div className="text-left">
-                    <h2 className="text-2xl font-bold text-indigo-600">{month.month}</h2>
-                    <p className="text-gray-600 mt-1">Theme: {month.theme}</p>
-                    <p className="text-sm text-gray-500 mt-1">{month.emails.length} emails this month</p>
-                  </div>
-                  {expandedMonth === month.month ? (
-                    <ChevronUp className="w-6 h-6 text-gray-400" />
-                  ) : (
-                    <ChevronDown className="w-6 h-6 text-gray-400" />
-                  )}
-                </button>
-
-                {expandedMonth === month.month && (
-                  <div className="border-t border-gray-200">
-                    {month.emails.map((email, emailIndex) => (
-                      <div key={emailIndex} className="p-6 border-b border-gray-100 hover:bg-gray-50 transition-colors">
-                        <div className="flex items-start justify-between mb-4">
-                          <div className="flex-1">
-                            <div className="flex items-center gap-2 mb-2">
-                              <span className="px-3 py-1 bg-indigo-100 text-indigo-700 rounded-full text-xs font-semibold">
-                                {email.week}
-                              </span>
-                              <span className="px-3 py-1 bg-purple-100 text-purple-700 rounded-full text-xs font-semibold">
-                                {email.hook}
-                              </span>
-                            </div>
-                            <h3 className="text-lg font-bold text-gray-800 mb-2">
-                              📧 Subject: {email.subject}
-                            </h3>
-                            <p className="text-sm text-green-600 font-medium mb-1">
-                              ✅ CTA: {email.cta}
-                            </p>
-                          </div>
-                        </div>
-
-                        <div className="bg-gradient-to-r from-indigo-50 to-purple-50 rounded-lg p-4 border-l-4 border-indigo-500">
-                          <div className="flex items-start justify-between mb-2">
-                            <h4 className="font-semibold text-gray-700 flex items-center gap-2">
-                              <span className="text-indigo-600">🤖</span>
-                              CustomGPT Prompt:
-                            </h4>
-                            <button
-                              onClick={() => copyToClipboard(email.prompt, `${monthIndex}-${emailIndex}`)}
-                              className="flex items-center gap-1 px-3 py-1 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 transition-colors text-sm"
-                            >
-                              {copiedIndex === `${monthIndex}-${emailIndex}` ? (
-                                <>
-                                  <Check className="w-4 h-4" />
-                                  Copied!
-                                </>
-                              ) : (
-                                <>
-                                  <Copy className="w-4 h-4" />
-                                  Copy
-                                </>
-                              )}
-                            </button>
-                          </div>
-                          <p className="text-gray-700 text-sm leading-relaxed">{email.prompt}</p>
-                        </div>
-                      </div>
-                    ))}
-                  </div>
-                )}
-              </div>
-            ))}
-          </div>
-
-          <div className="bg-white rounded-xl shadow-lg p-6 mt-6">
-            <h3 className="font-bold text-lg text-gray-800 mb-3">📝 Usage Instructions for VA:</h3>
-            <ul className="space-y-2 text-gray-700 text-sm">
-              <li><strong>1.</strong> Click "Copy" to copy the CustomGPT prompt</li>
-              <li><strong>2.</strong> Paste into your CustomGPT tool</li>
-              <li><strong>3.</strong> Use or adjust subject lines as needed</li>
-              <li><strong>4.</strong> Make CTA prominent (button/bold)</li>
-              <li><strong>5.</strong> Send emails Mon/Wed/Fri</li>
-              <li><strong>6.</strong> Track open rates and replies</li>
-            </ul>
+          <h3>📧 Subject: Your brain is lying to you about AP CS...</h3>
+          <p class="cta">✅ CTA: Reply 'READY' to see how we turn C students into 5-scorers</p>
+          <div class="prompt-box">
+            <div class="prompt-header">
+              <strong>🤖 CustomGPT Prompt:</strong>
+              <button class="copy-btn" onclick="copyPrompt(this)">
+                📋 Copy
+              </button>
+            </div>
+            <p class="prompt-text">
+              Write a marketing email using the 'brain lying' angle. Start with a shocking truth about how students' biggest fear (that they're not smart enough for AP CS) is actually a cognitive bias. Include a mini case study of a student who thought they'd fail but scored a 5. Tone: confident, slightly provocative, empowering. End with CTA to reply 'READY'.
+            </p>
           </div>
         </div>
-      );
-    };
 
-    ReactDOM.createRoot(document.getElementById('root')).render(<EmailCalendar />);
+        <div class="email-item">
+          <div class="badges">
+            <span class="badge week">Week 1</span>
+            <span class="badge hook">Differentiation</span>
+          </div>
+          <h3>📧 Subject: [FIRSTNAME] - This is NOT another coding course</h3>
+          <p class="cta">✅ CTA: Book a 15-min Strategy Call - 3 spots left this week</p>
+          <div class="prompt-box">
+            <div class="prompt-header">
+              <strong>🤖 CustomGPT Prompt:</strong>
+              <button class="copy-btn" onclick="copyPrompt(this)">📋 Copy</button>
+            </div>
+            <p class="prompt-text">
+              Create an email that positions our AP CS prep as completely different from traditional tutoring or online courses. Use the 'gap in the market' framework - what everyone else does vs what we do. Include the specific difference: we focus on confidence + exam strategy, not just content. Make it feel exclusive and premium. CTA: book a strategy call.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Month: December -->
+    <div class="month">
+      <div class="month-header" onclick="toggleMonth(this)">
+        <div>
+          <h2>December</h2>
+          <p>Theme: Urgency & Holiday Momentum</p>
+          <p class="small">5 emails this month</p>
+        </div>
+        <div class="arrow">▼</div>
+      </div>
+      <div class="emails">
+        <div class="email-item">
+          <div class="badges">
+            <span class="badge week">Week 1</span>
+            <span class="badge hook">Opportunity/Contrast</span>
+          </div>
+          <h3>📧 Subject: While everyone's baking cookies, smart students are...</h3>
+          <p class="cta">✅ CTA: Start now, thank yourself in May - Book call</p>
+          <div class="prompt-box">
+            <div class="prompt-header">
+              <strong>🤖 CustomGPT Prompt:</strong>
+              <button class="copy-btn" onclick="copyPrompt(this)">📋 Copy</button>
+            </div>
+            <p class="prompt-text">
+              Create an email about using the holiday season strategically. Contrast what most students do (completely disconnect) vs what top scorers do (use the break to build momentum). Include the psychological advantage of starting when others aren't. Make it feel like an insider secret. CTA: book a call to create their holiday game plan.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <h3>📝 Usage Instructions for VA:</h3>
+      <ul>
+        <li>1. Click "Copy" to copy the CustomGPT prompt.</li>
+        <li>2. Paste the prompt into your CustomGPT tool exactly as written.</li>
+        <li>3. Use or keep the provided subject line (both optimized for open rates).</li>
+        <li>4. Ensure the CTA is prominent in the final email.</li>
+        <li>5. Send emails Monday, Wednesday, and Friday.</li>
+        <li>6. Track open rates and replies to optimize performance.</li>
+      </ul>
+    </div>
+  </div>
+
+  <script>
+    function toggleMonth(header) {
+      const emails = header.nextElementSibling;
+      const arrow = header.querySelector('.arrow');
+      const allEmails = document.querySelectorAll('.emails');
+      const allArrows = document.querySelectorAll('.arrow');
+
+      // Close all other months
+      allEmails.forEach(e => { if (e !== emails) e.style.display = 'none'; });
+      allArrows.forEach(a => { if (a !== arrow) a.classList.remove('up'); });
+
+      // Toggle this one
+      if (emails.style.display === 'block') {
+        emails.style.display = 'none';
+        arrow.classList.remove('up');
+      } else {
+        emails.style.display = 'block';
+        arrow.classList.add('up');
+      }
+    }
+
+    function copyPrompt(button) {
+      const promptText = button.closest('.prompt-box').querySelector('.prompt-text').innerText;
+      navigator.clipboard.writeText(promptText);
+      button.innerText = '✅ Copied!';
+      setTimeout(() => { button.innerText = '📋 Copy'; }, 2000);
+    }
   </script>
 </body>
 </html>
