--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         {week:"Week 1",subject:"[FIRSTNAME] - This is NOT another coding course",hook:"Differentiation",cta:"Book a 15-min Strategy Call - 3 spots left this week",
           prompt:"Create an email that positions our AP CS prep as completely different from traditional tutoring or online courses. Use the 'gap in the market' framework - what everyone else does vs what we do. Include the specific difference: we focus on confidence + exam strategy, not just content. Make it feel exclusive and premium. End with urgency-driven CTA: Book a 15-min Strategy Call - only 3 spots left this week [link]. Make them feel like they need to act NOW."},
         {week:"Week 2",subject:"The '5-Score Formula'",hook:"Curiosity/Social Proof",cta:"Click here to book your call and get the blueprint",
-          prompt:"Write an email revealing a specific framework/system for scoring 5s. Use the 'stolen/borrowed' angle to create intrigue. Break down the 195-day formula (from now until May 14, 2026) into 3 simple phases (Foundation, Mastery, Confidence). Include a surprising stat about how confidence matters more than coding skills. CTA: Click here to book your call and get the personalized blueprint [link]. Position the call as where they get their custom roadmap."},
+          prompt:"Write an email revealing a specific framework/system for scoring 5s. Use the 'stolen/borrowed' angle to create intrigue. Break down the formula (from now until May 14, 2026) into 3 simple phases (Foundation, Mastery, Confidence). Include a surprising stat about how confidence matters more than coding skills. CTA: Click here to book your call and get the personalized blueprint [link]. Position the call as where they get their custom roadmap."},
         {week:"Week 2",subject:"Why your AP CS teacher can't help you score a 5",hook:"Controversial Truth",cta:"Book your call to learn the race car coach method",
           prompt:"Create a provocative email (but respectful to teachers) explaining that classroom teaching and exam preparation are two different skills. Use the analogy of 'driving instructor vs. race car coach.' Position our service as the 'race car coach' for AP exams. Include parent-friendly language. CTA: Book your call to learn the race car coach method [link]. Make the call feel essential to understanding the approach."},
         {week:"Week 3",subject:"Most students waste $200+ on AP CS prep. Here's why.",hook:"Money/Loss Aversion",cta:"Book a call to see how we're different (and smarter)",
@@ -280,6 +280,7 @@
   </script>
 </body>
 </html>
+
 
 
 
